--- a/Solution Notebook.ipynb
+++ b/Solution Notebook.ipynb
@@ -1,51 +1,59 @@
 {
-  "nbformat": 4,
-  "nbformat_minor": 0,
-  "metadata": {
-    "colab": {
-      "provenance": []
-    },
-    "kernelspec": {
-      "name": "python3",
-      "display_name": "Python 3"
-    },
-    "language_info": {
-      "name": "python"
-    }
-  },
   "cells": [
     {
       "cell_type": "markdown",
-      "source": [
-        "*Remember to install dependencies*"
-      ],
       "metadata": {
         "id": "xjDzAfYv2uve"
-      }
+      },
+      "source": [
+        "*Remember to install dependencies*"
+      ]
     },
     {
       "cell_type": "code",
-      "source": [
-        "!pip install -r requirements.txt"
-      ],
+      "execution_count": null,
       "metadata": {
         "id": "Xt7OHGIvw5K0"
       },
-      "execution_count": null,
-      "outputs": []
+      "outputs": [],
+      "source": [
+        "!pip install -r requirements.txt"
+      ]
     },
     {
       "cell_type": "markdown",
+      "metadata": {
+        "id": "DRwqmOIp1aQt"
+      },
       "source": [
         "## Approach 1 -\n",
         "Traditional text parsing - good performance but not very robust; sensitive to format changes and could break easily."
-      ],
-      "metadata": {
-        "id": "DRwqmOIp1aQt"
-      }
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": 34,
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "0OF4RdNr2KfP",
+        "outputId": "6bd3421b-1766-4288-d033-485c427565ab"
+      },
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "DDOS = 6\n",
+            "Viruses = 14\n",
+            "Threats = 13\n",
+            "Bugs = 10\n",
+            "Patches = 101\n",
+            "Vulnerabilities = 12\n"
+          ]
+        }
+      ],
       "source": [
         "from bs4 import BeautifulSoup\n",
         "import json\n",
@@ -99,14 +107,12 @@
         "# Where are the data files stored\n",
         "data_path = \"data/\"\n",
         "\n",
-        "for file in glob.glob(data_path+\"*.*\"):\n",
-        "  file_type = file.split(\".\")[-1]\n",
-        "  if file_type == \"xml\":\n",
-        "    xml_reader(keyword_dict, file)\n",
-        "  if file_type == \"json\":\n",
-        "    json_reader(keyword_dict, file)\n",
-        "  if file_type == \"txt\":\n",
-        "    txt_reader(keyword_dict, file)\n",
+        "for file in glob.glob(data_path+\"*.xml\"):\n",
+        "  xml_reader(keyword_dict, file)\n",
+        "for file in glob.glob(data_path+\"*.json\"):\n",
+        "  json_reader(keyword_dict, file)\n",
+        "for file in glob.glob(data_path+\"*.txt\"):\n",
+        "  txt_reader(keyword_dict, file)\n",
         "\n",
         "for keyword in keywords_list[:6]:\n",
         "  count = 0\n",
@@ -115,56 +121,56 @@
         "      count += value \n",
         "  print(keyword,\"=\",str(count))\n",
         "\n"
-      ],
-      "metadata": {
-        "id": "0OF4RdNr2KfP",
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "outputId": "6bd3421b-1766-4288-d033-485c427565ab"
-      },
-      "execution_count": 34,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "DDOS = 6\n",
-            "Viruses = 14\n",
-            "Threats = 13\n",
-            "Bugs = 10\n",
-            "Patches = 101\n",
-            "Vulnerabilities = 12\n"
-          ]
-        }
       ]
     },
     {
       "cell_type": "markdown",
+      "metadata": {
+        "id": "u-7CfVGRz-FU"
+      },
       "source": [
         "## Approach 2\n",
         "Using ChatGPT to parse the data documents. Slower, but much more robust.\n",
         "\n",
         "*Visit ChatGPT Website to find API Key:*\n",
         "https://platform.openai.com/account/api-keys"
-      ],
-      "metadata": {
-        "id": "u-7CfVGRz-FU"
-      }
+      ]
     },
     {
       "cell_type": "code",
-      "source": [
-        "secret_key = \"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\""
-      ],
+      "execution_count": 32,
       "metadata": {
         "id": "OZEWs_2szris"
       },
-      "execution_count": 32,
-      "outputs": []
+      "outputs": [],
+      "source": [
+        "secret_key = \"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\""
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": 35,
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "MTzMi0EO2Unz",
+        "outputId": "fdbe2529-5600-43c6-eae4-73b618c6dea5"
+      },
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "Viruses = 14\n",
+            "Bugs = 10\n",
+            "DDOS = 6\n",
+            "Patches = 101\n",
+            "Vulnerabilities = 12\n",
+            "Threats = 13\n"
+          ]
+        }
+      ],
       "source": [
         "import os\n",
         "import openai\n",
@@ -201,29 +207,21 @@
         "for key in keyword_dict.keys():\n",
         "    print(str(key),\"=\",str(keyword_dict[key]))\n",
         "        "
-      ],
-      "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "MTzMi0EO2Unz",
-        "outputId": "fdbe2529-5600-43c6-eae4-73b618c6dea5"
-      },
-      "execution_count": 35,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "Viruses = 14\n",
-            "Bugs = 10\n",
-            "DDOS = 6\n",
-            "Patches = 101\n",
-            "Vulnerabilities = 12\n",
-            "Threats = 13\n"
-          ]
-        }
       ]
     }
-  ]
+  ],
+  "metadata": {
+    "colab": {
+      "provenance": []
+    },
+    "kernelspec": {
+      "display_name": "Python 3",
+      "name": "python3"
+    },
+    "language_info": {
+      "name": "python"
+    }
+  },
+  "nbformat": 4,
+  "nbformat_minor": 0
 }
