--- a/Solution Notebook.ipynb
+++ b/Solution Notebook.ipynb
@@ -117,8 +117,7 @@
         "  for key, value in keyword_dict.items():\n",
         "    if keyword[:2] in key:\n",
         "      count += value \n",
-        "  print(keyword,\"=\",str(count))\n",
-        "\n"
+        "  print(keyword,\"=\",str(count))"
       ]
     },
     {
