--- a/Solution Notebook.ipynb
+++ b/Solution Notebook.ipynb
@@ -115,7 +115,7 @@
         "for keyword in keywords_list[:6]:\n",
         "  count = 0\n",
         "  for key, value in keyword_dict.items():\n",
-        "    if keyword[:2] in key:\n",
+        "    if keyword[:2] in key: # Combine singular and plurals together\n",
         "      count += value \n",
         "  print(keyword,\"=\",str(count))"
       ]
